# libogc2

./: .gitignore  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  PKGBUILD  README.md  configure  gamecube_rules  gamecube_rules.in  libogc2_license.txt  meson.build  meson.options  rtems_license.txt  wii_rules  wii_rules.in
gc/: aesndlib.h  asndlib.h  gccore.h  gctypes.h  gcutil.h  iso9660.h  mad.h  network.h  smb.h
include/: aesndlib.h  gctypes.h  gcutil.h  malloc.h  network.h  ogcsys.h
libaesnd/: aesndlib.c  aesndmp3player.c
libasnd/: asndlib.c  mp3player.c
libc/: malloc.c  malloc_wii.c  mallocr.c  strdup.c  strndup.c
libdb/: debug.c  debug_handler.S  debug_supp.c  debug_supp.h  geckousb.c  tcpip.c
libdi/: di.c
libiso9660/: iso9660.c
libm2loader/: m2loader.c
libmad/: fixed.h
libmodplay/: gcmodplay.c  mixer.c  modplay.c
libogc/: aram.c  argv.c  arqmgr.c  arqueue.c  audio.c  cache.c  cache_asm.S  card.c  cond.c  conf.c  console.c  console.h  console_font_8x16.c  decrementer.c  decrementer_handler.S  dsp.c  dvd.c  es.c  exception.c  exception_handler.S  exi.c  gcsd.c  gu.c  gu_psasm.S  gx.c  gx_regdef.h  ios.c  ipc.c  irq.c  irq_handler.S  isfs.c  kprintf.c  lock_supp.c  lwp.c  lwp_handler.S  lwp_heap.c  lwp_heap.inl  lwp_messages.c  lwp_messages.inl  lwp_mutex.c  (+55 more)
libtinysmb/: des.c  smb.c  smb_devoptab.c
libwiikeyboard/: keyboard.c  ukbdmap.c  usbkeyboard.c  wskbdutil.c  wsksymvar.h
lwbt/: bte.c  hci.c  hci.h  l2cap.c  physbusif.c
lwip/: network.c
wiiuse/: classic.c  definitions.h  events.c  events.h  guitar_hero_3.c  io.h  ir.h  nunchuk.c  (+7 more)
(+156 files in other folders)
